--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Quiz App</title>
 </head>
 <body>
@@ -22,5 +23,7 @@
             <button id="next_btn" class="next_btn btn">next</button>
         </main>
     </article>
+
+    <script src="script.js"></script>
 </body>
 </html>
