i made the basic functionalities

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <article class="container">
-        <main id="question_container">
+        <main id="question_container" class="hide">
             <div id="question">Question</div>
             <div id="answer_buttons" class="grid">
                 <button class="btn">answer 1</button>
