i added new feature

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
         </main>
         <main class="controls">
             <button id="start_btn" class="start_btn btn">start</button>
-            <button id="next_btn" class="next_btn btn">next</button>
+            <button id="next_btn" class="next_btn btn hide">next</button>
         </main>
+
+        <div id="well" class="well">WELL DONE</div>
+
     </article>
 
     <script src="script.js"></script>
